--- a/sample_layered/.env
+++ b/sample_layered/.env
@@ -2,6 +2,6 @@ PORT = 8080
 HOST = localhost
 
 DB_HOST = localhost
-DB_USERNAME = username
+DB_USERNAME = root
 DB_PASSWORD = password
 DB_NAME = dbname
